Fixed Overlapping Issue
fixed an overlapping issue in collections

--- a/css/GameLibrary.css
+++ b/css/GameLibrary.css
@@ -55,7 +55,17 @@
     display: var(--CoverHover) !important;
 }
 
-.appgrid_SortingDropDownContainer_1ZpBQ > div {
+/* Removes the divider line in Collections */
+.appgrid_AppGridSectionHeader_3bWIS .appgrid_Rule_3pJqX {
+    display: none !important;
+}
+
+/* Removes the sticky header in Collections */
+.appgrid_AppGridSectionHeader_3bWIS::after {
+    display: none !important;
+}
+
+.appgrid_SortingDropDownContainer_1ZpBQ > div {.appgrid_AppGridSectionHeader_3bWIS .appgrid_Rule_3pJqX
     background: var(--grey) !important;
     border-radius: var(--Corner0) !important;
     border: 0 !important;
@@ -122,6 +132,7 @@
 
 .smartscrollcontainer_ScrollToTopButton_1J21t:hover.smartscrollcontainer_Visible_28ZR8 {
     color: white !important;
+    filter: none !important;
 }
 
 .libraryhomenewupdates_PartnerEventRowCapsule_Container_B-vCd .libraryhomenewupdates_EventTimeSpan_3OSZu {
